Update folder structure and add environment variable

--- a/application/docker-compose.yml
+++ b/application/docker-compose.yml
@@ -32,9 +32,12 @@ services:
           - kafka
 
   kafka-producer:
+    build:
+      context: ./kafka-producer
     image: kafka-producer
     volumes:
       - ../debug-api:/mnt
+      - ../:/app
     depends_on:
     - kafka
     environment:
