--- a/application/kafka-producer/Dockerfile
+++ b/application/kafka-producer/Dockerfile
@@ -5,11 +5,15 @@ COPY requirements.txt .
 RUN set -ex; \
   	pip install --no-cache-dir -r requirements.txt
 
-# Copy resources
-WORKDIR /
-COPY wait-for-it.sh wait-for-it.sh
+# Set up working directory first
+WORKDIR /app/application/kafka-producer
 
-ADD python-producer.py .
+# Copy files to specific locations
+COPY wait-for-it.sh /usr/local/bin/
+COPY python-producer.py /app/
 
+# Fix line endings and make script executable
+RUN sed -i 's/\r$//' /usr/local/bin/wait-for-it.sh && \
+    chmod +x /usr/local/bin/wait-for-it.sh
 
-CMD ./wait-for-it.sh -s -t 30 $ZOOKEEPER_SERVER -- ./wait-for-it.sh -s -t 30 $KAFKA_SERVER -- python -u python-producer.py
+CMD wait-for-it.sh -s -t 30 $ZOOKEEPER_SERVER -- wait-for-it.sh -s -t 30 $KAFKA_SERVER -- python -u python-producer.py
