Remove pycache directories from project

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 .env
 dev-rebuild.sh
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Python distribution/packaging
+*.egg-info/
+dist/
+build/
+*.egg
