--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,32 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "d3": "^7.8.5",
+    "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "d3": "^7.8.5",
     "d3-geo": "^3.1.0",
     "topojson-client": "^3.1.0"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
+    "@types/d3-geo": "^3.1.0",
+    "@types/geojson": "^7946.0.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/d3": "^7.4.3",
-    "@types/d3-geo": "^3.0.5",
     "@types/topojson-client": "^3.1.4",
-    "@types/geojson": "^7946.0.14",
-    "typescript": "^5",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "typescript": "^5"
   }
 } 
