--- a/application/postgres/Dockerfile
+++ b/application/postgres/Dockerfile
@@ -1,5 +1,5 @@
-# Pull latest postgres image
-FROM postgres:latest
+# Pull postgres 16 image for compatibility
+FROM postgres:16
 
 # Put the .sql file in the execution-directory of the container
 COPY create_table.sql /docker-entrypoint-initdb.d/
