--- a/application/docker-compose.yml
+++ b/application/docker-compose.yml
@@ -32,6 +32,8 @@ services:
     image: confluentinc/cp-kafka:7.3.2
     depends_on:
       - zookeeper
+    ports:
+      - "9092:9092"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:32181
@@ -41,16 +43,19 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
-      JMX_PORT: 9999
+      KAFKA_CREATE_TOPICS: "test-topic:1:1"
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
     networks:
       - app_network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 30s
+      test: nc -z localhost 9092 || exit 1
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 15s
 
   kafka-producer:
     build:
