--- a/application/docker-compose.yml
+++ b/application/docker-compose.yml
@@ -8,6 +8,7 @@ services:
   frontend:
     build:
       context: ../frontend
+    container_name: frontend
     ports:
       - "3001:3000"
     networks:
@@ -17,6 +18,7 @@ services:
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.2
+    container_name: zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 32181
       ZOOKEEPER_TICK_TIME: 2000
@@ -46,6 +48,7 @@ services:
 
   kafka:
     image: confluentinc/cp-kafka:7.3.2
+    container_name: kafka
     depends_on:
       zookeeper:
         condition: service_healthy
@@ -90,6 +93,7 @@ services:
   kafka-producer:
     build:
       context: ./kafka-producer
+    container_name: kafka-producer
     volumes:
       - ../debug-api:/mnt:rw
       - ../:/app:rw
@@ -115,6 +119,7 @@ services:
     build:
       context: ./flink-processor
       dockerfile: Dockerfile
+    container_name: flink-processor
     volumes:
       - ../debug-api:/mnt:rw
     depends_on:
