--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "react": "^18",
     "react-dom": "^18",
     "d3-geo": "^3.1.0",
-    "topojson-client": "^3.1.0"
+    "topojson-client": "^3.1.0",
+    "framer-motion": "^11.0.8",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
@@ -24,6 +26,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/topojson-client": "^3.1.4",
+    "@types/pg": "^8.11.2",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
