--- a/application/flink-processor/Dockerfile
+++ b/application/flink-processor/Dockerfile
@@ -1,3 +1,13 @@
+FROM maven:3.8-openjdk-8 AS builder
+
+# Copy source code
+WORKDIR /build
+COPY pom.xml .
+COPY src src/
+
+# Build the application
+RUN mvn clean package
+
 FROM openjdk:8u151-jdk-alpine3.7
 
 # Install Bash
@@ -6,7 +16,7 @@ RUN apk add --no-cache bash libc6-compat dos2unix
 # Copy resources
 WORKDIR /
 COPY wait-for-it.sh wait-for-it.sh
-COPY target/flink-kafka2postgres-1.0-SNAPSHOT-jar-with-dependencies.jar flink-processor.jar
+COPY --from=builder /build/target/flink-kafka2postgres-1.0-SNAPSHOT-jar-with-dependencies.jar flink-processor.jar
 
 # Fix line endings and set permissions
 RUN dos2unix wait-for-it.sh && \
