--- a/application/kafka-producer/requirements.txt
+++ b/application/kafka-producer/requirements.txt
@@ -1,7 +1,10 @@
 kafka-python==2.0.2
-schedule==1.1.0
 aiokafka==0.7.2
+schedule==1.2.1
+Flask==3.0.2
+Werkzeug==3.0.1
 Faker==15.1.3
 requests==2.32.3
 pyyaml==6.0.1
 python-dotenv==1.0.0
+flask-cors==4.0.0
