Add real-time updating UI for kafka production

--- a/application/kafka-producer/Dockerfile
+++ b/application/kafka-producer/Dockerfile
@@ -1,9 +1,12 @@
 FROM python:3.8-slim
 
+# Install curl for healthcheck
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 COPY requirements.txt .
 
 RUN set -ex; \
-  	pip install --no-cache-dir -r requirements.txt
+    pip install --no-cache-dir -r requirements.txt
 
 # Set up working directory first
 WORKDIR /app/application/kafka-producer
