--- a/application/docker-compose.yml
+++ b/application/docker-compose.yml
@@ -3,6 +3,7 @@ version: "2.4"
 networks:
   app_network:
     driver: bridge
+    name: app_network
 
 services:
   frontend:
@@ -13,6 +14,18 @@ services:
       - "3001:3000"
     networks:
       - app_network
+    environment:
+      - KAFKA_PRODUCER_URL=http://kafka-producer:8000
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres
+    depends_on:
+      kafka-producer:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
     restart: unless-stopped
     mem_limit: 256m
 
@@ -20,34 +33,28 @@ services:
     image: confluentinc/cp-zookeeper:7.3.2
     container_name: zookeeper
     environment:
-      ZOOKEEPER_CLIENT_PORT: 32181
+      ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
       KAFKA_HEAP_OPTS: "-Xmx128m -Xms64m"
       ZOOKEEPER_MAX_CLIENT_CNXNS: 60
       ZOOKEEPER_4LW_COMMANDS_WHITELIST: "*"
-      KAFKA_JMX_PORT: 9999
-      KAFKA_JMX_HOSTNAME: localhost
     ports:
-      - "32181:32181"
+      - "2181:2181"
     networks:
       - app_network
     restart: unless-stopped
     mem_limit: 256m
-    ulimits:
-      nofile:
-        soft: 65536
-        hard: 65536
     healthcheck:
-      test: echo ruok | nc localhost 32181 || exit 1
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 20s
+      test: ["CMD-SHELL", "echo ruok | nc localhost 2181 || exit 1"]
+      interval: 5s
+      timeout: 3s
+      retries: 3
+      start_period: 10s
 
   kafka:
-    image: confluentinc/cp-kafka:7.3.2
+    image: bitnami/kafka:3.5
     container_name: kafka
     depends_on:
       zookeeper:
@@ -56,38 +63,19 @@ services:
       - "9092:9092"
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:32181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
-      KAFKA_CREATE_TOPICS: "weather:1:1"
-      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-      KAFKA_HEAP_OPTS: "-Xmx256m -Xms128m"
-      KAFKA_ZOOKEEPER_CONNECTION_TIMEOUT_MS: 60000
-      KAFKA_ZOOKEEPER_SESSION_TIMEOUT_MS: 60000
-      KAFKA_LOG_RETENTION_HOURS: 1
-      KAFKA_LOG_SEGMENT_BYTES: 536870912
-      KAFKA_LOG_RETENTION_CHECK_INTERVAL_MS: 300000
-      KAFKA_JMX_PORT: 9998
-      KAFKA_JMX_HOSTNAME: localhost
+      KAFKA_CFG_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_CFG_LISTENERS: PLAINTEXT://:9092
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      ALLOW_PLAINTEXT_LISTENER: "yes"
     networks:
       - app_network
     restart: unless-stopped
-    mem_limit: 512m
-    ulimits:
-      nofile:
-        soft: 65536
-        hard: 65536
+    mem_limit: 1g
     healthcheck:
-      test: nc -z localhost 9092 || exit 1
+      test: ["CMD-SHELL", "kafka-topics.sh --bootstrap-server localhost:9092 --list || exit 1"]
       interval: 30s
       timeout: 10s
-      retries: 5
+      retries: 3
       start_period: 30s
 
   kafka-producer:
@@ -104,18 +92,22 @@ services:
         condition: service_healthy
       zookeeper:
         condition: service_healthy
+      postgres:
+        condition: service_healthy
     environment:
       KAFKA_SERVER: "kafka:9092"
-      ZOOKEEPER_SERVER: "zookeeper:32181"
+      ZOOKEEPER_SERVER: "zookeeper:2181"
       PRODUCER_INTERVAL: 100
     networks:
       - app_network
     restart: unless-stopped
     mem_limit: 256m
-    ulimits:
-      nofile:
-        soft: 65536
-        hard: 65536
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/logs || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
 
   flink-processor:
     build:
@@ -131,7 +123,7 @@ services:
         condition: service_healthy
     environment:
       KAFKA_SERVER: "kafka:9092"
-      ZOOKEEPER_SERVER: "zookeeper:32181"
+      ZOOKEEPER_SERVER: "zookeeper:2181"
       PRODUCER_INTERVAL: 100
     networks:
       - app_network
@@ -151,12 +143,8 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
-    logging:
-      options:
-        max-size: 10m
-        max-file: "3"
     ports:
-      - 5438:5432
+      - "5438:5432"
     networks:
       - app_network
     volumes:
@@ -167,6 +155,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+      start_period: 10s
 
 volumes:
   settings:
