--- a/application/docker-compose.yml
+++ b/application/docker-compose.yml
@@ -8,7 +8,8 @@ networks:
 services:
   frontend:
     build:
-      context: ../frontend
+      context: ..
+      dockerfile: frontend/Dockerfile
     container_name: frontend
     ports:
       - "3001:3000"
