--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,25 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "20.11.30",
+    "@types/react": "18.2.67",
+    "@types/react-dom": "18.2.22",
+    "autoprefixer": "10.4.18",
+    "js-yaml": "^4.1.0",
     "d3": "^7.8.5",
     "next": "14.1.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "d3-geo": "^3.1.0",
     "topojson-client": "^3.1.0",
     "framer-motion": "^11.0.8",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "plotly.js": "^2.30.0",
+    "postcss": "8.4.35",
+    "react-plotly.js": "^2.6.0",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.4.2"
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
     "@types/d3-geo": "^3.1.0",
     "@types/geojson": "^7946.0.14",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/topojson-client": "^3.1.4",
     "@types/pg": "^8.11.2",
-    "autoprefixer": "^10.0.1",
+    "@types/plotly.js": "^2.29.2",
+    "@types/react-plotly.js": "^2.6.3",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
