--- a/application/docker-compose.yml
+++ b/application/docker-compose.yml
@@ -38,21 +38,28 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
-      KAFKA_HEAP_OPTS: "-Xmx128m -Xms64m"
+      KAFKA_HEAP_OPTS: "-Xmx512m -Xms256m"
       ZOOKEEPER_MAX_CLIENT_CNXNS: 60
       ZOOKEEPER_4LW_COMMANDS_WHITELIST: "*"
+      ZOOKEEPER_SERVER_ID: 1
+      ZOOKEEPER_SERVERS: zookeeper:2888:3888
     ports:
       - "2181:2181"
+      - "2888:2888"
+      - "3888:3888"
     networks:
       - app_network
+    volumes:
+      - zookeeper_data:/var/lib/zookeeper/data
+      - zookeeper_log:/var/lib/zookeeper/log
     restart: unless-stopped
-    mem_limit: 256m
+    mem_limit: 768m
     healthcheck:
       test: ["CMD-SHELL", "echo ruok | nc localhost 2181 || exit 1"]
-      interval: 5s
-      timeout: 3s
-      retries: 3
-      start_period: 10s
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 15s
 
   kafka:
     image: bitnami/kafka:3.5
@@ -68,8 +75,13 @@ services:
       KAFKA_CFG_LISTENERS: PLAINTEXT://:9092
       KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       ALLOW_PLAINTEXT_LISTENER: "yes"
+      KAFKA_CFG_NUM_PARTITIONS: 3
+      KAFKA_CFG_DEFAULT_REPLICATION_FACTOR: 1
+      KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE: "true"
     networks:
       - app_network
+    volumes:
+      - kafka_data:/bitnami/kafka
     restart: unless-stopped
     mem_limit: 1g
     healthcheck:
@@ -161,3 +173,9 @@ services:
 volumes:
   settings:
   data:
+  zookeeper_data:
+    driver: local
+  zookeeper_log:
+    driver: local
+  kafka_data:
+    driver: local
