--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "postcss": "8.4.35",
     "react-plotly.js": "^2.6.0",
     "tailwindcss": "3.4.1",
-    "typescript": "5.4.2"
+    "typescript": "5.4.2",
+    "dockerode": "^3.3.5",
+    "@types/dockerode": "^3.3.23"
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
