--- a/application/docker-compose.yml
+++ b/application/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     container_name: frontend
     ports:
       - "3001:3000"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - app_network
     environment:
@@ -26,6 +28,8 @@ services:
       kafka-producer:
         condition: service_healthy
       postgres:
+        condition: service_healthy
+      flink-processor:
         condition: service_healthy
     restart: unless-stopped
     mem_limit: 256m
@@ -147,6 +151,12 @@ services:
       nofile:
         soft: 65536
         hard: 65536
+    healthcheck:
+      test: ["CMD-SHELL", "ps aux | grep -v grep | grep -q 'java.*WeatherDataProcessor' || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 60s
 
   postgres:
     build:
