--- a/application/docker-compose.yml
+++ b/application/docker-compose.yml
@@ -152,11 +152,11 @@ services:
         soft: 65536
         hard: 65536
     healthcheck:
-      test: ["CMD-SHELL", "ps aux | grep -v grep | grep -q 'java.*WeatherDataProcessor' || exit 1"]
+      test: ["CMD", "pgrep", "-f", "WeatherDataProcessor"]
       interval: 30s
       timeout: 10s
       retries: 5
-      start_period: 60s
+      start_period: 90s
 
   postgres:
     build:
