--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -90,6 +90,47 @@ COPY --from=builder /app/package.json ./package.json
 COPY --from=builder /app/debug-api /app/debug-api/
 COPY --from=builder /app/configuration.yml /app/configuration.yml
 
+# Create a valid configuration file
+RUN echo 'debugApi:' > /app/configuration.yml && \
+    echo '  citiesPool:' >> /app/configuration.yml && \
+    echo '  - London' >> /app/configuration.yml && \
+    echo '  - Stockholm' >> /app/configuration.yml && \
+    echo '  - Toronto' >> /app/configuration.yml && \
+    echo '  - Moscow' >> /app/configuration.yml && \
+    echo '  - Madrid' >> /app/configuration.yml && \
+    echo '  - Reykjavik' >> /app/configuration.yml && \
+    echo '  - Helsinki' >> /app/configuration.yml && \
+    echo '  - Rome' >> /app/configuration.yml && \
+    echo '  - Venice' >> /app/configuration.yml && \
+    echo '  - Lisbon' >> /app/configuration.yml && \
+    echo '  - Paris' >> /app/configuration.yml && \
+    echo '  - Amsterdam' >> /app/configuration.yml && \
+    echo '  queryConfig:' >> /app/configuration.yml && \
+    echo '    queryAttribute: continent' >> /app/configuration.yml && \
+    echo '    queryRequirement: Europe' >> /app/configuration.yml && \
+    echo '  charts:' >> /app/configuration.yml && \
+    echo '    bubbleChart:' >> /app/configuration.yml && \
+    echo '      separateGraphDisplay: False' >> /app/configuration.yml && \
+    echo '      bubbleColorTheme: brown' >> /app/configuration.yml && \
+    echo '      pngOutput: True' >> /app/configuration.yml && \
+    echo '    pieChart:' >> /app/configuration.yml && \
+    echo '      chartType: Color-Theme' >> /app/configuration.yml && \
+    echo '      pieColorTheme: orange' >> /app/configuration.yml && \
+    echo '      pngOutput: True' >> /app/configuration.yml && \
+    echo '    equatorChart:' >> /app/configuration.yml && \
+    echo '      displayLinearTrend: False' >> /app/configuration.yml && \
+    echo '      displayLogarithmicTrend: True' >> /app/configuration.yml && \
+    echo '      displayActualTrend: False' >> /app/configuration.yml && \
+    echo '      pngOutput: True' >> /app/configuration.yml && \
+    echo '' >> /app/configuration.yml && \
+    echo 'realTimeProduction:' >> /app/configuration.yml && \
+    echo '  cities:' >> /app/configuration.yml && \
+    echo '  - London' >> /app/configuration.yml && \
+    echo '  - Stockholm' >> /app/configuration.yml && \
+    echo '  - Toronto' >> /app/configuration.yml && \
+    echo '  - Moscow' >> /app/configuration.yml && \
+    echo '  - Madrid' >> /app/configuration.yml
+
 # Set environment variables
 ENV NODE_ENV production
 ENV PORT 3000
@@ -99,30 +140,51 @@ ENV PYTHONPATH=/app/debug-api
 EXPOSE 3000
 
 # Create FastAPI app if it doesn't exist
-RUN mkdir -p /app/debug-api && \
-    echo 'from fastapi import FastAPI\nfrom fastapi.middleware.cors import CORSMiddleware\nimport os\nimport json\n\napp = FastAPI()\n\napp.add_middleware(\n    CORSMiddleware,\n    allow_origins=["*"],\n    allow_credentials=True,\n    allow_methods=["*"],\n    allow_headers=["*"],\n)\n\n@app.get("/flink/logs")\nasync def get_logs(type: str = "raw"):\n    try:\n        import docker\n        client = docker.from_env()\n        container = client.containers.get("flink-processor")\n        logs = container.logs().decode("utf-8").split("\\n")\n        filtered_logs = [log for log in logs if (type == "raw" and "Raw data received" in log) or (type == "db" and "Inserting into DB" in log)]\n        return filtered_logs[-100:] if filtered_logs else []\n    except Exception as e:\n        print(f"Error fetching logs: {str(e)}")\n        return []' > /app/debug-api/main.py
+RUN mkdir -p /app/debug-api
+RUN echo 'from fastapi import FastAPI' > /app/debug-api/main.py && \
+    echo 'from fastapi.middleware.cors import CORSMiddleware' >> /app/debug-api/main.py && \
+    echo 'import os' >> /app/debug-api/main.py && \
+    echo 'import json' >> /app/debug-api/main.py && \
+    echo 'import requests' >> /app/debug-api/main.py && \
+    echo '' >> /app/debug-api/main.py && \
+    echo 'app = FastAPI()' >> /app/debug-api/main.py && \
+    echo '' >> /app/debug-api/main.py && \
+    echo 'app.add_middleware(' >> /app/debug-api/main.py && \
+    echo '    CORSMiddleware,' >> /app/debug-api/main.py && \
+    echo '    allow_origins=["*"],' >> /app/debug-api/main.py && \
+    echo '    allow_credentials=True,' >> /app/debug-api/main.py && \
+    echo '    allow_methods=["*"],' >> /app/debug-api/main.py && \
+    echo '    allow_headers=["*"],' >> /app/debug-api/main.py && \
+    echo ')' >> /app/debug-api/main.py && \
+    echo '' >> /app/debug-api/main.py && \
+    echo '@app.get("/api/kafka-logs")' >> /app/debug-api/main.py && \
+    echo 'async def get_kafka_logs():' >> /app/debug-api/main.py && \
+    echo '    try:' >> /app/debug-api/main.py && \
+    echo '        # This endpoint can still be implemented with the docker client as before' >> /app/debug-api/main.py && \
+    echo '        import docker' >> /app/debug-api/main.py && \
+    echo '        client = docker.from_env()' >> /app/debug-api/main.py && \
+    echo '        container = client.containers.get("kafka-producer")' >> /app/debug-api/main.py && \
+    echo '        logs = container.logs(tail=1000).decode("utf-8")' >> /app/debug-api/main.py && \
+    echo '        return {"logs": logs}' >> /app/debug-api/main.py && \
+    echo '    except Exception as e:' >> /app/debug-api/main.py && \
+    echo '        print(f"Error fetching Kafka logs: {str(e)}")' >> /app/debug-api/main.py && \
+    echo '        return {"error": str(e)}' >> /app/debug-api/main.py && \
+    echo '' >> /app/debug-api/main.py && \
+    echo '# Health check endpoint' >> /app/debug-api/main.py && \
+    echo '@app.get("/health")' >> /app/debug-api/main.py && \
+    echo 'async def health_check():' >> /app/debug-api/main.py && \
+    echo '    return {"status": "healthy"}' >> /app/debug-api/main.py
 
-# Create start script with debug output and health check
+# Create start script with simplified health check
 RUN echo '#!/bin/sh' > /start.sh && \
     echo 'echo "Starting FastAPI server..."' >> /start.sh && \
     echo 'cd /app/debug-api' >> /start.sh && \
     echo 'uvicorn main:app --host 0.0.0.0 --port 8000 &' >> /start.sh && \
-    echo 'echo "Waiting for FastAPI server to start..."' >> /start.sh && \
-    echo 'sleep 5' >> /start.sh && \
     echo 'echo "Starting Next.js server..."' >> /start.sh && \
     echo 'cd /app' >> /start.sh && \
     echo 'node server.js &' >> /start.sh && \
-    echo 'echo "Waiting for Next.js server to start..."' >> /start.sh && \
-    echo 'sleep 5' >> /start.sh && \
-    echo 'while true; do' >> /start.sh && \
-    echo '  if curl -sf http://localhost:3000 >/dev/null && curl -sf http://localhost:8000/flink/logs >/dev/null; then' >> /start.sh && \
-    echo '    echo "Both servers are running"' >> /start.sh && \
-    echo '    wait' >> /start.sh && \
-    echo '  else' >> /start.sh && \
-    echo '    echo "Waiting for servers to be ready..."' >> /start.sh && \
-    echo '    sleep 5' >> /start.sh && \
-    echo '  fi' >> /start.sh && \
-    echo 'done' >> /start.sh && \
+    echo 'echo "Services started, waiting for them to complete"' >> /start.sh && \
+    echo 'wait' >> /start.sh && \
     chmod +x /start.sh
 
 # Use start script
