--- a/application/docker-compose.yml
+++ b/application/docker-compose.yml
@@ -13,12 +13,11 @@ services:
     container_name: frontend
     ports:
       - "3001:3000"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - app_network
     environment:
       - KAFKA_PRODUCER_URL=http://kafka-producer:8000
+      - FLINK_PROCESSOR_URL=http://flink-processor:8001
       - POSTGRES_HOST=postgres
       - POSTGRES_PORT=5432
       - POSTGRES_USER=postgres
@@ -26,6 +25,7 @@ services:
       - POSTGRES_DB=postgres
     depends_on:
       - kafka-producer
+      - flink-processor
       - postgres
     restart: unless-stopped
     mem_limit: 256m
@@ -106,8 +106,8 @@ services:
       context: ./flink-processor
       dockerfile: Dockerfile
     container_name: flink-processor
-    volumes:
-      - ../debug-api:/mnt:rw
+    ports:
+      - "8001:8001"
     depends_on:
       - kafka
       - zookeeper
