--- a/application/docker-compose.yml
+++ b/application/docker-compose.yml
@@ -12,7 +12,8 @@ services:
       dockerfile: frontend/Dockerfile
     container_name: frontend
     ports:
-      - "3001:3000"
+      - "3001:3001"
+      - "8002:8000"
     networks:
       - app_network
     environment:
@@ -23,6 +24,9 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=postgres
+      - NODE_ENV=production
+      - PORT=3001
+      - HOSTNAME=0.0.0.0
     depends_on:
       - kafka-producer
       - flink-processor
