--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -13,6 +13,9 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "typeRoots": ["./node_modules/@types"],
+    "noImplicitAny": false,
+    "skipDefaultLibCheck": true,
     "plugins": [
       {
         "name": "next"
