--- a/application/docker-compose.yml
+++ b/application/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       - NODE_ENV=production
       - PORT=3001
       - HOSTNAME=0.0.0.0
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - kafka-producer
       - flink-processor
