Add fixed 10-second time window for the charts and add 'Chart.js' library

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -29,7 +29,8 @@ WORKDIR /app
 # Copy frontend package.json
 COPY frontend/package.json ./
 RUN npm install --production=false && \
-    npm install --save-dev @types/node @types/js-yaml @types/fs-extra
+    npm install --save-dev @types/node @types/js-yaml @types/fs-extra && \
+    npm install chart.js@^4.0.0 react-chartjs-2@^5.0.0
 
 # Copy frontend source files
 COPY frontend/ ./
