Fix docker container runtime environment issue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,6 +100,7 @@ services:
       KAFKA_SERVER: "kafka:9092"
       ZOOKEEPER_SERVER: "zookeeper:2181"
       PRODUCER_INTERVAL: 100
+      WEATHER_API_KEY: ${WEATHER_API_KEY}
     networks:
       - app_network
     restart: unless-stopped
